2007-12-19  David Zeuthen  <davidz@redhat.com>

	Introduce g_volume_monitor_adopt_orphan_mount() function. Also
	add signals 'disconnected' and 'eject-button' on GDrive. Add
	signal 'removed' on GVolume and 'unmounted' on GMount.

	* gdrive.c: (g_drive_base_init):
	* gdrive.h:
	* gfile.c: (g_file_mount_mountable),
	(g_file_mount_enclosing_volume):
	* gio.symbols:
	* gioerror.h:
	* gmount.c: (g_mount_base_init):
	* gmount.h:
	* gunionvolumemonitor.c: (g_volume_monitor_adopt_orphan_mount):
	* gunixvolumemonitor.c: (update_volumes), (update_mounts):
	* gvolume.c: (g_volume_base_init), (g_volume_mount):
	* gvolume.h:
	* gvolumemonitor.h:

2007-12-17  Matthias Clasen  <mclasen@redhat.com>

	* *.c: Fix up includes in the section docs.

2007-12-17  Alexander Larsson  <alexl@redhat.com>

        * gnativevolumemonitor.h:
        * gunionvolumemonitor.c:
        * gunixvolumemonitor.c:
	Add is_supported() to GNativeVolumeMonitorClass so
	that we can avoid having to create an object to see
	if the backend is supported at runtime.
	Also add name member and an env var to pick a specific
	volume monitor backend.
	
        * gmountprivate.h:
        * glocalfile.c:
	Add cancellable to _g_mount_get_for_mount_path()
	
        * glocaldirectorymonitor.c:
        * glocalfilemonitor.c:
	Avoid loading and unloading modules while sorting.

2007-12-17  Matthias Clasen  <mclasen@redhat.com>

	* gio.symbols:
	* gunixmounts.[hc]: Namespace waste reduction, move some
	g_get_unix_mount functions to the g_unix_mount namespace.

	* gunixmounts.c:
	* gunixvolumemonitor.c:
	* glocalfile.c:
	* glocaldirectorymonitor.c: Update all callers.

	* gunixmounts.h: Remove leftover g_unix_get_canonical_device_path

2007-12-17  Alexander Larsson  <alexl@redhat.com>

        * gfile.c:
	Add doc comments about what GFile operations are
	guaranteed to not block.

2007-12-17  Alexander Larsson  <alexl@redhat.com>

        * gunixmounts.c:
	Add missing #ifdef fixing OSX build.